file organization changes

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="angular-container" ng-app="app">
 			<div ng-controller="example.controller">
-				<h1>Angular Boilerplate <span ng-bind="message"></span>
+				<h1>Boilerplate <span ng-bind="message"></span></h1>
 			</div>
 		</div>
 		<script src="js/bundle.min.js"></script>
