added more functionality for spRest.service library

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<div id="angular-container" ng-app="app">
-			<div ng-controller="example.controller">
+			<!-- <div ui-view></div> -->
+			<div ng-controller="parent.controller">
 				<h1>Boilerplate <span ng-bind="message"></span></h1>
 			</div>
 		</div>
