added new function for emptying list item file attachments in batches

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 			<!-- <div ui-view></div> -->
 			<div ng-controller="parent.controller">
 				<h1>Boilerplate <span ng-bind="message"></span></h1>
-				 <button ngf-select="uploadFile($file)" name="file">Upload File</button>
+				 <button ngf-select="uploadFiles($files, $invalidFiles)" name="file">Upload File</button>
 				 <button ng-click="downloadFile()">Download File</button>
 			</div>
 		</div>
