--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 	    <meta name="apple-mobile-web-app-capable" content="yes"> -->
 	    <title>My Application</title>
 	    <link rel="stylesheet" type="text/css" href="css/app.min.css">
+		<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.0/1/MicrosoftAjax.js"></script>
+		<script type="text/javascript" src="_layouts/15/sp.runtime.js"></script>
+		<script type="text/javascript" src="_layouts/15/sp.js"></script>
 	</head>
 	<body>
 		<div id="angular-container" ng-app="app">
