--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 	<head>
 	    <meta charset="UTF-8" http-equiv="x-ua-compatible" content="IE=edge">
-<!-- 	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+	    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 	    <meta name="apple-mobile-web-app-capable" content="yes"> -->
-	    <title>My Application</title>
-	    <link rel="stylesheet" type="text/css" href="css/app.min.css">
+		<title>My Application</title>
+		<!-- STYLES -->
+		<link rel="stylesheet" type="text/css" href="css/app.min.css">
+		<!-- SHAREPOINT RELATED LIBRARY -->
 		<script type="text/javascript" src="//ajax.aspnetcdn.com/ajax/4.0/1/MicrosoftAjax.js"></script>
 		<script type="text/javascript" src="_layouts/15/sp.runtime.js"></script>
 		<script type="text/javascript" src="_layouts/15/sp.js"></script>
 	</head>
 	<body>
-		<div id="angular-container" ng-app="app">
+		<div id="angular-container" ng-app="app" ng-cloak>
 			<!-- <div ui-view></div> -->
 			<div ng-controller="parent.controller">
 				<h1>Boilerplate <span ng-bind="message"></span></h1>
