updated boilerplate code and reorganize file structure

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 	<head>
 	    <meta charset="UTF-8" http-equiv="x-ua-compatible" content="IE=edge">
 	    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="_layouts/15/sp.js"></script>
 	</head>
 	<body>
-		<div id="angular-container" ng-app="app" ng-cloak>
+		<div id="angular-container" ng-cloak>
 			<!-- <div ui-view></div> -->
 			<div ng-controller="parent.controller">
 				<h1>Boilerplate <span ng-bind="message"></span></h1>
